added need help route
added sendGrid + updated swagger
